--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+
+# WANDB
+wandb
+models
+runs
+
