--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
 grpcio==1.51.1
 grpcio-tools==1.44.0
 protobuf==3.20.3
-netifaces
+netifaces~=0.11.0
 huggingface_sb3
 huggingface_hub
-docker
-numpy
+docker~=6.0.1
+numpy~=1.23.3
 stable-baselines3
 sb3_contrib
-pytest
-wandb
-seaborn
+pytest~=7.1.3
+wandb~=0.13.3
+seaborn~=0.12.0
 paramiko
 scp
-rpyc
+rpyc~=5.3.1
+
+gym~=0.26.1
+optuna~=3.0.2
+torch~=1.12.1
+setuptools~=65.3.0
+PyYAML~=6.0
+scipy~=1.8.1
+pandas~=1.5.0
+pytablewriter~=0.64.2
+tqdm~=4.64.1
+requests~=2.28.1
+matplotlib~=3.6.0
+rliable~=1.0.8
