--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ huggingface_sb3
 huggingface_hub
 docker~=6.0.1
 numpy~=1.23.3
-stable-baselines3
-sb3_contrib
+stable-baselines3==1.8.0
+sb3_contrib==1.8.0
 pytest~=7.1.3
 wandb~=0.13.3
 seaborn~=0.12.0
